add crm sub source into guide

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ APP_ENV=local
 APP_KEY=base64:d816GsRuMoL3v7spmbpQQLGD64vgFJKUq/2zE3laVyI=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
+APP_FRONTEND_URL = 
+CRM_URL=
+CRM_TOKEN=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -30,24 +33,17 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-
 MAIL_HOST=mail.smtp2go.com
-
 MAIL_PORT=465
-
 MAIL_USERNAME=null
-
 MAIL_PASSWORD=null
-
 MAIL_ENCRYPTION=ssl
-
 MAIL_FROM_ADDRESS=info@mail.com
-
 MAIL_FROM_NAME=mailAddress
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
+AWS_DEFAULT_REGION=ap-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
