mortgage lead to CRM M

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ APP_URL=http://127.0.0.1:8000
 APP_FRONTEND_URL = 
 CRM_URL=
 CRM_TOKEN=
+MORTGAGE_LEAD_API=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
