--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravelcollective/html": "^6.4",
         "league/flysystem-aws-s3-v3": "^3.22",
         "maatwebsite/excel": "^3.1",
+        "spatie/laravel-backup": "^8.2",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.10",
         "spatie/laravel-sluggable": "^3.5",
