--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "league/flysystem-aws-s3-v3": "^3.22",
         "maatwebsite/excel": "^3.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
+        "spatie/enum": "^3.13",
         "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-backup": "^8.2",
         "spatie/laravel-medialibrary": "^10.0.0",
